k8s/infra/nuclio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard
spec:
  parentRefs:
    - name: public
      namespace: ingress-nginx
      sectionName: https-nuclio
  hostnames:
    - nuclio.simproject.kr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: bouncer
      backendRefs:
        - name: infra-nuclio-dashboard
          port: 8070
